fix sidebar active category shift

--- a/website/src/css/customTheme.scss
+++ b/website/src/css/customTheme.scss
@@ -759,7 +759,6 @@ aside[class^="theme-doc-sidebar-container"] {
   a[class*="menu__link--sublist-caret"] {
     font-size: 16px !important;
     font-weight: 700 !important;
-    padding: 5px 12px !important;
     color: var(--ifm-color-content-secondary) !important;
 
     &:after {
